<resources>
    <string name="app_name">Daily Zodiac</string>
    <string name="banner_ad_unit_id_main">ca-app-pub-9618820882948570/9078200644</string>
    <string name="banner_ad_unit_id_years">ca-app-pub-9618820882948570/4508400241</string>
    <string name="banner_ad_unit_id_chaina">ca-app-pub-9618820882948570/5985133446</string>
    <string name="banner_ad_unit_id_default">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ad_unit_id_splash">ca-app-pub-9618820882948570/9779217849</string>
    <string name="banner_ad_unit_id_brjak_today">ca-app-pub-9618820882948570/3732684247</string>
    <string name="banner_ad_unit_id_chance_today">ca-app-pub-9618820882948570/2255951043</string>
    <string name="banner_ad_unit_id_comp_with_name">ca-app-pub-9618820882948570/6825751446</string>
    <string name="banner_ad_unit_id_comp_with_zodic">ca-app-pub-9618820882948570/8302484643</string>
    <string name="Please_Fill_This_Field"> Please Fill This Field</string>
    <string name="horoscope_title_1"> ARIES </string>
    <string name="horoscope_title_2"> Taurus </string>
    <string name="horoscope_title_3"> Gemini </string>
    <string name="horoscope_title_4"> Cancer </string>
    <string name="horoscope_title_5"> Leo </string>
    <string name="horoscope_title_6"> Virgo </string>
    <string name="horoscope_title_7"> Libra </string>
    <string name="horoscope_title_8"> Scorpio </string>
    <string name="horoscope_title_9"> Sagittarius </string>
    <string name="horoscope_title_10"> Capricorn </string>
    <string name="horoscope_title_11"> Aquarius </string>
    <string name="horoscope_title_12"> Pisces </string>
    <string name="horoscope_title_chaina_1">Rat</string>
    <string name="horoscope_title_chaina_2"> OX </string>
    <string name="horoscope_title_chaina_3"> Tiger</string>
    <string name="horoscope_title_chaina_4">Rabbit</string>
    <string name="horoscope_title_chaina_5">Dragon</string>
    <string name="horoscope_title_chaina_6"> Snake</string>
    <string name="horoscope_title_chaina_7">Horse</string>
    <string name="horoscope_title_chaina_8"> Ram</string>
    <string name="horoscope_title_chaina_9"> Monkey</string>
    <string name="horoscope_title_chaina_10"> Rooster</string>
    <string name="horoscope_title_chaina_11"> Dog</string>
    <string name="horoscope_title_chaina_12">Pig</string>
    <string name="today_wisdom">Wisdom Of The Day</string>
    <string name="Joke_of_the_Day">Joke Of The Day</string>
    <string name="Which_I_read_and_liked">Which I Read And Liked</string>
    <string name="Happened_on_this_day">Happened On This Day</string>
    <string name="tabOne">Main</string>
    <string name="tabTwo">Yearly Zodiac</string>
    <string name="tabThree"> Yearly Chinese</string>
    <string name="tabFour"> Zodic World </string>
    <string name="errormsg">Network Error !</string>
    <string name="title_1">Compatibility</string>
    <string name="title_2">Compatibility by name</string>
    <string name="title_3">Your lucky today</string>
    <string name="name1_hint">Your Name :</string>
    <string name="name2_hint">Partner Name :</string>
    <string name="comp1">Unhappy Relationship</string>
    <string name="comp2">Good Relationship</string>
    <string name="comp3">Not Good Relationship at beginning but very good at end</string>
    <string name="comp4">Very Strong Relationship</string>
    <string name="comp5">Very Good Relationship</string>
    <string name="comp6">Good Relationship at beginning </string>
    <string name="comp7">Very Happy Relationship</string>
    <string name="comp8">Very Funny Relationship </string>
    <string name="comp9">Unsuccessful Relationship</string>
    <string name="comp10">Good Relationship</string>
    <string name="facebook_app_id">468282623362383</string>
    <string name="cat_1">Horoscope today</string>
    <string name="cat_2">Your Lucky today</string>
    <string name="cat_3">Compatibility by Sign</string>
    <string name="cat_4">Compatibility by name </string>
    <string name="cat_5">Diary</string>
    <string name="cat_6">Fun</string>
    <string name="img1_1">
       When two Aries come together, it is imperative for at least one of them to have mastered the art of staying calm. If this is achieved by one of them, not through passive aggression but through rational thought, their relationship can be truly rewarding. As two warm and passionate people, they can share many adventurous moments that raise their energy levels sky high. If, however, none of them has this rational, grown-up ability, it is only possible to prolong their relationship based on superficial activities and sex, of course. Since the sign of Aries takes Saturn, the wise ruler of time, patience and responsibility to its detriment, one of these partners will have to learn their lesson and take responsibility for the future of their relationship if they are to last in time.
    </string>
    <string name="img1_2">
        This is a relationship full of personal challenges and individual depth. If they want to succeed as a couple, many internal issues in both must be solved. Only if they both accomplish peace in their lives, have just enough education, just enough other relationships and acquired just enough humor, they might be able to put aside their differences and listen to each other well enough. It is not that hard, except when you are used to using your horns.
    </string>
    <string name="img1_3">
The overall impression of this couple would be good, exciting and challenging, a relationship where both partners can learn a lot and be active in a healthy way. The main problem with their romantic involvement is the lack of trust, especially if Aries partner gets too attached to Gemini, always fighting for their freedom. The need for conversation with a lot of essence is bigger than any positive or any negative aspects of their relationship and both of them should always have this in mind. In general, there is a big chance these two will end up together, because their shared love of adventure is bigger than most of their troubles.
    </string>
    <string name="img1_4">
This relationship can be painful for both partners and needs a lot of work put into it in order to work. It requires both of the partners to adapt and make changes in their behavior, while tip toing around each other most of the time. It is not an easy road, but the rewards are such inner understanding of passion, full of emotion and the ability to create something truly unique. If they succeed, they will probably never be satisfied with a different partner.
    </string>
    <string name="img1_5">
The relationship of Aries and Leo is passionate and turbulent, but they don’t seem to mind an occasional fight and a sharp word. When they fall in love deeply, they are almost impossible to separate as they stubbornly hold on to the idea of their future together. Although they are not two of the most romantic believers in love, they are passionate in their beliefs and when they find love, they will fight for it until there is literally nothing left of their relationship.
It is meaningless to advise gentle behavior or looking for peace, because the entire world of their relationship is based on the element of Fire they share. It is pointless to look for peace, when the opposite of peace is what attracts them in the first place. For as long as they love each other and stay faithful and true, they will be tied up in a relationship they need to fight for every day. Their main objective is to find a way to enjoy the fight and have fun
    </string>
    <string name="img1_6">
It’s a good thing that the relationship between an Aries and a Virgo is never boring. Although in most cases they are not really meant to last, it can still be a fun experience if none of them takes their potential for a shared future too seriously. In case they take the best out of their relationship, giving it enough freedom and unpredictability, Virgo would incorporate some of Aries’ energy, while Aries would allow Virgo to teach them how to organize their thoughts and communicate calmly. This way they might come to the point where their relationship could actually last, and the outcome depends on their ability to relax and have fun together.
    </string>
    <string name="img1_7">
However difficult it might be to reconcile these two natures, remember that this is a primal opposition that represents partners by signification. Aries and Libra are the couple of the zodiac, as much as any other opposing signs, for they are each other’s seventh house, house of relationships. Even more so if we acknowledge the fact that Libra is the sign of relationships in general. Any problem they might have with each other is something to be worked on, because it shows what their personal problem with any relationship is. When they are madly attracted to each other and fall in love, there is almost nothing that could separate them, no matter the differences. Wouldn’t we all like to find the middle ground with our loved one? They need to work on their bond, that’s a fact, but their relationship is a promise of a perfect fit of two souls meant to be together.
    </string>
    <string name="img1_8">
Think of this combination of signs through the most aggressive image of Fire and Water element. Fire evaporates Water, just like Aries shatters Scorpio’s feelings. Water damps down Fire, just like Scorpio wears Aries out. They seem to bring out the worst in each other and this is nobody’s fault, it is just hard to reconcile so much focused energy that moves in two different directions. Their relationship is like the process of nuclear fusion and often just too much to handle.
    </string>
    <string name="img1_9">
This is definitely a couple with lots of potential. They might have to stand up to their environment and defend their feelings from others, but this won’t shake them too much, for neither of them thinks that much about the opinion of others anyway. If they manage to mend their philosophical differences and respect each other’s different opinions, they could become one of the warmest relationships in the zodiac. Their main relationship advice would be to always tell the truth to each other and not go crazy about their healthy differences. Their differences are exactly the thing that could make their sexual life more exciting.
    </string>
    <string name="img1_10">
This is not an easy relationship. None of the partners has any trace of lightness and blissful ignorance. This is why their relationship might seem like a competition to ruin the relationship in the best possible way. It is hard to say who will get out of it a winner, for they will both feel lousy most of the time and be relieved that they finally separated. If they stubbornly decide they love each other too much to let each other go, both of them would probably bang their heads against a wall for years to come.
Their only chance of success is unconditional respect and the wideness of their views and expectations. They could truly complement each other, but only in a scenario where they would look for good in one another and highlight each other’s qualities. Unfortunately, the malefic nature of their rulers rarely allows for them to be this positive and acceptance oriented. If they got together, and whatever their story is, they should think about the things they could learn from each other instead of looking for each other’s shortcomings, and always stay out of each other’s business.
    </string>
</resources>