<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context="com.inet.Abraj_English.Fragments.Daily_thing">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/your_chance_today"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_btn"
                android:padding="10dp"
                android:text="@string/cat_2"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/tab_text_size" />

            <Button
                android:id="@+id/brjak_today"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_btn"
                android:padding="10dp"
                android:text="@string/cat_1"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/tab_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/game_1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_btn"
                android:padding="10dp"
                android:text="@string/cat_3"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/tab_text_size" />

            <Button
                android:id="@+id/game_2"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_btn"
                android:padding="10dp"
                android:text="@string/cat_4"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/tab_text_size" />
        </LinearLayout>


    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_weight="1"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_main"></com.google.android.gms.ads.AdView>


</LinearLayout>
