<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/astrology_1"
    tools:context="com.inet.Abraj.WisdomForToday">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:background="@drawable/background1"
        android:weightSum="2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="1.5"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/Joke_of_the_Day"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_btn"
                    android:padding="10dp"
                    android:text="@string/Joke_of_the_Day"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/tab_text_size" />

                <Button
                    android:id="@+id/today_wisdom"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_btn"
                    android:padding="10dp"
                    android:text="@string/today_wisdom"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/tab_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/Happened_on_this_day"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_btn"
                    android:padding="10dp"
                    android:text="@string/Happened_on_this_day"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/tab_text_size" />

                <Button
                    android:id="@+id/which_i_read_and_liked"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_btn"
                    android:padding="10dp"
                    android:text="@string/Which_I_read_and_liked"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/tab_text_size" />
            </LinearLayout>


        </LinearLayout>


        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id_main"></com.google.android.gms.ads.AdView>

    </LinearLayout>
</LinearLayout>
