<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:paddingStart="10dp"
    android:paddingTop="1dp"
    android:paddingEnd="10dp"
    android:background="@drawable/background2"
    tools:context="com.inet.Abraj.NameCompatibility"
    android:layout_height="match_parent">


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_chaina_game2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        ads:adUnitId="@string/banner_ad_unit_id_chaina">
    </com.google.android.gms.ads.AdView>


    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/com_1"
        android:id="@+id/img"
        android:layout_marginTop="10dp"
        android:layout_below="@id/adView_chaina_game2"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_below="@id/img"
        android:id="@+id/edit1"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp">

        <EditText
            android:id="@+id/name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:hint="@string/name1_hint"
            android:inputType="text"
             />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit1"
        android:id="@+id/edit2"
        android:textSize="18sp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp">

        <EditText
            android:id="@+id/name2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:hint="@string/name2_hint"
            android:inputType="text"
            />

    </android.support.design.widget.TextInputLayout>



    <Button
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/chk_comp1"
        android:layout_width="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:textSize="16sp"
        android:text="Click To Matching"
        android:textColor="@color/windowBackground"
        android:layout_below="@id/edit2"
        android:background="@color/colorAccent"
        android:visibility="visible" />


</RelativeLayout>